--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  margin-left: 2em;
+  margin-top: 2em;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+h1,
+p,
+button {
+  font-family: 'PT Sans Narrow', sans-serif;
+  color: #283618;
+  margin: 0;
+}
+
+h1 {
+  font-size: 7em;
+}
+
+p {
+  font-size: 7em;
+  margin-left: 0.5em;
+}
+
+button {
+  border-radius: 0.5em;
+  border: none;
+  background-color: #f6bd60;
+  font-size: 2em;
+  padding: 0.2em;
+  margin-top: 2em;
+  cursor: pointer;
 }
