--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-evenly;
   margin-left: 2em;
   margin-top: 2em;
 }
@@ -46,4 +45,38 @@ button {
   padding: 0.2em;
   margin-top: 2em;
   cursor: pointer;
+}
+
+/*-------------------------------- breakpoints------------------------*/
+
+@media only screen and (max-width: 900px) {
+  .App {
+    align-items: center;
+    margin: 0;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h1 {
+    margin: 0;
+    font-size: 25vw;
+  }
+
+  p {
+    margin: 0;
+    text-align: center;
+    font-size: 20vw;
+  }
+
+  button {
+    font-size: 3em;
+    margin-bottom: 1em;
+  }
 }
